tests/negative/neg_pr118i_write_enum_literal.safe
package neg_pr118i_write_enum_literal

   type color is (red, green);

   red = green;
